Attempt to fix scroll outside modal on safari

--- a/src/styles/global/layout.scss
+++ b/src/styles/global/layout.scss
@@ -5,6 +5,10 @@
 
 @import "src/styles/scaffold";
 
+html {
+  height: 100vh;
+}
+
 body {
   min-height: 100vh;
   color: var(--fs-color-text);
@@ -43,14 +47,17 @@ main,
   box-sizing: border-box;
   width: 100%;
   max-width: var(--fs-grid-breakpoint-notebook);
-  margin-right: auto;
-  margin-left: auto;
   padding-right: var(--fs-grid-padding);
   padding-left: var(--fs-grid-padding);
+  margin-right: auto;
+  margin-left: auto;
 }
 
 // Avoids double scroll issue on the page when overlay is open
 .no-scroll {
+  position: fixed;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   touch-action: none;
 }
